--- a/404.html
+++ b/404.html
@@ -8,29 +8,38 @@
     <script>
         window.onload = function () {
             const destination = window.location.href;
-            if (window.location.href.includes("https://edoc2022.github.io")) {
-                const redirectLocation = window.location.href.replace(
-                    "https://edoc2022.github.io",
-                    "http://edocconference.org/2022"
-                );
-                document.getElementById("body").innerHTML = "Redirecting to " + redirectLocation + " ...";
-                window.location.href = redirectLocation;
+            const redirect = function (location) {
+              document.getElementById("body").innerHTML = "Redirecting to " + location + " ...";
+              window.location.href = location;
             }
-            else if (window.location.href.includes("edoc2022.github.io")) {
+
+            if (window.location.href.includes("https://www.edoc2022.github.io")) {
                 const redirectLocation = window.location.href.replace(
-                    "edoc2022.github.io",
-                    "edocconference.org/2022"
+                    "https://www.edoc2022.github.io",
+                    "http://www.edocconference.org/2022"
                 );
-                document.getElementById("body").innerHTML = "Redirecting to " + redirectLocation + " ...";
-                window.location.href = redirectLocation;
+                redirect(redirectLocation);
             }
             else if (window.location.href.includes("www.edoc2022.github.io")) {
                 const redirectLocation = window.location.href.replace(
                     "www.edoc2022.github.io",
                     "www.edocconference.org/2022"
                 );
-                document.getElementById("body").innerHTML = "Redirecting to " + redirectLocation + " ...";
-                window.location.href = redirectLocation;
+                redirect(redirectLocation);
+            }
+            else if (window.location.href.includes("https://edoc2022.github.io")) {
+                const redirectLocation = window.location.href.replace(
+                    "https://edoc2022.github.io",
+                    "http://edocconference.org/2022"
+                );
+                redirect(redirectLocation);
+            }
+            else if (window.location.href.includes("edoc2022.github.io")) {
+                const redirectLocation = window.location.href.replace(
+                    "edoc2022.github.io",
+                    "edocconference.org/2022"
+                );
+                redirect(redirectLocation);
             }
         }
     </script>
