Update redirect to HTTPS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to http://edocconference.org/2022</title>
-<meta http-equiv="refresh" content="0; URL=http://edocconference.org/2022">
-<link rel="canonical" href="http://edocconference.org/2022">
+<meta http-equiv="refresh" content="0; URL=https://edocconference.org/2022">
+<link rel="canonical" href="https://edocconference.org/2022">
